src/player_experience/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tta-player-experience
  labels:
    app.kubernetes.io/name: tta-player-experience
    app.kubernetes.io/component: namespace
